fixed z-index issue burger menu

--- a/src/app/components/Header/Header.module.css
+++ b/src/app/components/Header/Header.module.css
@@ -14,7 +14,7 @@
 	grid-template-columns: 150px auto;
 	grid-template-rows: 75px 75px;
 	margin: 0 auto;
-  padding:0 20px;
+	padding: 0 20px;
 }
 
 .topNavBar {
@@ -79,11 +79,11 @@
 	position: absolute;
 	visibility: hidden;
 	opacity: 0;
-  color: #2c506d;
+	color: #2c506d;
 }
 
 .burgerIcon {
-  font-size: 2.5em;
+	font-size: 2.5em;
 }
 
 @media only screen and (max-width: 1090px) {
@@ -93,28 +93,29 @@
 		opacity: 1;
 	}
 
-  .navCross {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    color: white;
-  }
+	.navCross {
+		position: absolute;
+		top: 10px;
+		right: 10px;
+		color: white;
+	}
 
 	.navBarContainer {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
 		position: fixed;
 		top: 0;
 		left: 0;
 		height: 100%;
 		width: 100%;
 		background-color: #2c506d;
-		transition: 1s;
+		transition: 0.7s;
 		transform: translateY(-100vh);
-    color: white;
-    font-size: 2.5em;
-    gap: 1em;
+		color: white;
+		font-size: 2.5em;
+		gap: 1em;
+		z-index: 10;
 	}
 
 	.responsive_nav {
